# mhs-py-hw

./: .gitignore
hw-1/: README.md  pyproject.toml
hw-1/artifacts/: task_1_1.md  task_1_2.md  task_1_3.md
hw-1/src/: nl.py  tail.py  wc.py
hw-1/test_files/: sample1.txt
hw-2/: Dockerfile  README.md  docker-compose.yml  generate_example.py  pyproject.toml
hw-2/artifacts/: task_2_1.tex  task_2_2.md  task_2_2.tex
hw-2/src/: __init__.py  latex_generator.py
hw-3/: README.md  pyproject.toml  task_3_1.py  task_3_2.py  task_3_3.py
hw-3/artifacts/task_3_3/: C.txt  hash.txt
hw-3/src/: __init__.py  matrix.py  matrix_cache.py  matrix_mixin.py  mixins.py
hw-4/: README.md  pyproject.toml  task_4_1.py  task_4_2.py  task_4_3.py
hw-4/artifacts/: task_4_1.txt  task_4_2.txt  task_4_3.txt
hw-4/src/: __init__.py  fibonacci.py  integrate.py
